Update Orleans JobGrain

--- a/src/Anduin.Dispatcher.Grains/Anduin.Dispatcher.Grains.csproj
+++ b/src/Anduin.Dispatcher.Grains/Anduin.Dispatcher.Grains.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="3.2.2" />
+    <PackageReference Include="Microsoft.Orleans.EventSourcing" Version="3.2.2" />
+    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="3.2.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Anduin.Dispatcher.GrainInterfaces\Anduin.Dispatcher.GrainInterfaces.csproj" />
+  </ItemGroup>
+
 </Project>
