--- a/src/Anduin.EventBus/Anduin.EventBus.csproj
+++ b/src/Anduin.EventBus/Anduin.EventBus.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Distributed\" />
+  </ItemGroup>
+
 </Project>
