--- a/src/Anduin.Dispatcher.Api/Anduin.Dispatcher.Api.csproj
+++ b/src/Anduin.Dispatcher.Api/Anduin.Dispatcher.Api.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.Client" Version="3.4.2" />
+  </ItemGroup>
+
 
 </Project>
