--- a/src/Anduin.EventBus.Kafka/Anduin.EventBus.Kafka.csproj
+++ b/src/Anduin.EventBus.Kafka/Anduin.EventBus.Kafka.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Anduin.EventBus\Anduin.EventBus.csproj" />
   </ItemGroup>
 
